src/test/ui/issues/60000-69999/issue-68091-unicode-ident-after-if.rs
macro_rules! x {
    ($($c:tt)*) => {
        $($c)รถ* {} //~ ERROR missing condition for `if` expression
    };             //~| ERROR mismatched types
}

fn main() {
    x!(if);
}
